--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "max-params": "off"
+    "max-params": "off",
+    "no-new": "off"
   }
 }
