--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "build": {
     "env": {
-      "CI": "false"
+      "CI": "false",
+      "TSC_COMPILE_ON_ERROR": true
     },
     "command": "npm run build --if-present",
     "skipNpmInstall": true,
